--- a/game/templates/game/counter_attack.html
+++ b/game/templates/game/counter_attack.html
@@ -8,4 +8,22 @@
     공격자가 낸 카드: {{ game.attacker_card }}
 </p>
 
-<p>여기서 반격 카드 선택 예정</p>
+<p>반격 카드를 선택하세요:</p>
+
+<form method="POST" action="{% url 'game:submit_counter' game.id %}">
+    {% csrf_token %}
+    
+    {% for card in cards %}
+    <label>
+        <input type="radio" name="card" value="{{ card }}" required>
+        {{ card }}
+    </label>
+    <br>
+    {% endfor %}
+    
+    <br>
+    <button type="submit">반격하기</button>
+</form>
+
+<br>
+<a href="{% url 'game:list_game' %}">게임 목록으로</a>
