--- a/game/templates/game/counter_attack.html
+++ b/game/templates/game/counter_attack.html
@@ -1,29 +1,32 @@
-<h2>반격하기</h2>
+{% load static %}
+<link rel="stylesheet" href="{% static 'game/css/counter_attack.css' %}" />
+<header>
+	<h3>PIROGRAMMER CARD GAME</h3>
+	<div class="header_menu">
+		<p>Game</p>
+		<p>Ranking</p>
+		<p>Logout</p>
+	</div>
+</header>
 
-<p>
-    {{ game.attacker }} vs {{ game.defender }}
-</p>
+<p>{{ game.attacker }} vs {{ game.defender }}</p>
 
-<p>
-    공격자가 낸 카드: {{ game.attacker_card }}
-</p>
+<p>Attcker: {{ game.attacker_card }}</p>
 
 <p>반격 카드를 선택하세요:</p>
 
 <form method="POST" action="{% url 'game:submit_counter' game.id %}">
-    {% csrf_token %}
-    
-    {% for card in cards %}
-    <label>
-        <input type="radio" name="card" value="{{ card }}" required>
-        {{ card }}
-    </label>
-    <br>
-    {% endfor %}
-    
-    <br>
-    <button type="submit">반격하기</button>
+	{% csrf_token %} {% for card in cards %}
+	<label>
+		<input type="radio" name="card" value="{{ card }}" required />
+		{{ card }}
+	</label>
+	<br />
+	{% endfor %}
+
+	<br />
+	<button type="submit">반격하기</button>
 </form>
 
-<br>
+<br />
 <a href="{% url 'game:list_game' %}">게임 목록으로</a>
