--- a/game/templates/game/create_game.html
+++ b/game/templates/game/create_game.html
@@ -14,39 +14,53 @@
 				<p>Logout</p>
 			</div>
 		</header>
-        <main>
+		<main>
 			<h3>PICK YOUR CARD</h3>
-            <form method="post">
-			{% csrf_token %}
-			<div class="defender_jmj">
-				<p>Defender</p>
-			    <select name="defender_id" required>
-				{% for user in users %}
-				    <option value="{{ user.id }}">{{ user.username }}</option>
-				{% endfor %}
-			</select>
-			</div>
+			<form method="post">
+				{% csrf_token %}
+				<div class="defender_jmj">
+					<p>Defender</p>
+					<select name="defender_id" required>
+						{% for user in users %}
+						<option value="{{ user.id }}">
+							{{ user.username }}
+						</option>
+						{% endfor %}
+					</select>
+				</div>
+				<div class="card_select_jmj">
+					{% for card in cards %}
+					<label>
+						<input
+							type="radio"
+							name="attacker_card"
+							value="{{ card }}"
+							required
+						/>
+						{{ card }}
+					</label>
+					{% endfor %}
+				</div>
+				<button class="attackbutton_jmj" type="submit">Attack!</button>
+			</form>
+		</main>
+		<footer></footer>
+		<script>
+			document
+				.querySelectorAll('input[type="radio"][name="attacker_card"]')
+				.forEach((radio) => {
+					radio.addEventListener("change", function () {
+						document
+							.querySelectorAll(".card_select_jmj label")
+							.forEach((label) => {
+								label.classList.remove("selected");
+							});
 
-			<div class="card_select_jmj">
-			{% for card in cards %}
-			<label>
-				<input
-					type="radio"
-					name="attacker_card"
-					value="{{ card }}"
-					required
-				/>
-				{{ card }}
-			</label>
-			{% endfor %}
-			</div>
-			<!-- if attack -->
-			<button class="attackbutton_jmj" type="submit">Attack!</button>
-            		</form>
-
-		<p>USER: <b>{{ request.user.username }}</b></p>
-
-
-        <footer></footer>
+						if (this.checked) {
+							this.parentElement.classList.add("selected");
+						}
+					});
+				});
+		</script>
 	</body>
 </html>
