--- a/game/templates/game/list_game.html
+++ b/game/templates/game/list_game.html
@@ -8,6 +8,15 @@
 {% endblock %}
 
 {% block content %}
+<header>
+    <h3>PIROGRAMMER CARD GAME</h3>
+    <div class="header_menu">
+        <a href="{% url 'game:create_game' %}">Game</a>
+        <a href="{% url 'game:ranking' %}">Ranking</a>
+        <a href="/accounts/logout/">Logout</a>
+    </div>
+</header>
+<footer></footer>
 <div class="list_container_mw">
     
     <div class="list_header_area_mw">
@@ -25,31 +34,42 @@
     <hr class="header_line_mw">
 
     <ul class="game_list_mw">
-        {% for game in page_obj %}
-        <li class="game_item_mw">
-            <div class="game_info_text_mw">
-                {{ game.id }} - {{ game.attacker.username }} vs {{ game.defender.username }}
-            </div>
+    {% for game in page_obj %}
+    <li class="game_item_mw">
+        <div class="game_info_text_mw">
+            {{ game.id }} - {{ game.attacker.username }} vs {{ game.defender.username }}
+        </div>
 
-            <div class="game_status_badge_mw">
-                {% if game.can_counter %}
-                    <a href="{% url 'game:counter_attack' game.id %}" class="badge_counter_mw">CounterAttack</a>
+        <div class="game_status_badge_mw">
+            {% if game.can_counter %}
+                <a href="{% url 'game:counter_attack' game.id %}" class="badge_common_mw badge_counter_mw">
+                    Counter Attack
+                </a>
 
-                {% elif game.can_cancel %}
-                    <span class="status_text_mw">playing...</span>
-                    <a href="{% url 'game:game_cancel' game.id %}" class="badge_cancel_mw">cancel</a>
+            {% elif game.can_cancel %}
+                <span class="playing_text_mw">playing...</span>
+                <a href="{% url 'game:game_cancel' game.id %}" class="badge_common_mw badge_cancel_mw">
+                    CANCEL
+                </a>
 
-                {% else %}
-                    <span class="status_text_mw">{{ game.display_status }}</span>
+            {% elif game.status == "FINISHED" %}
+                {% if game.user_result == "win" %}
+                    <span class="badge_common_mw badge_win_mw">WIN</span>
+                {% elif game.user_result == "lose" %}
+                    <span class="badge_common_mw badge_lose_mw">LOSE</span>
                 {% endif %}
-            </div>
+            
+            {% else %}
+                <span class="status_text_mw">{{ game.display_status }}</span>
+            {% endif %}
+        </div>
 
-            <a href="{% url 'game:game_detail' game.id %}" class="btn_game_info_mw">Game Info</a>
-        </li>
-        {% empty %}
-        <li class="no_game_mw">No Game History.</li>
-        {% endfor %}
-    </ul>
+        <a href="{% url 'game:game_detail' game.id %}" class="btn_game_info_mw">Game Info</a>
+    </li>
+    {% empty %}
+    <li class="no_game_mw">No Game History.</li>
+    {% endfor %}
+</ul>
 
     <div class="pagination_mw">
         {% if page_obj.has_previous %}
