main html&css settings.py 수정

--- a/game/static/game/css/game_detail.css
+++ b/game/static/game/css/game_detail.css
@@ -59,6 +59,17 @@ main {
 	text-align: center;
 }
 
+main .result_container_jmj
+main .result_container_jmj .game_result_jmj
+main .result_container_jmj .game_result_jmj .result_title_jmj
+main .result_container_jmj .game_info_jmj
+main .result_container_jmj .game_info_jmj .info_jmj
+main .result_container_jmj .game_info_jmj .card_result_jmj
+main .result_container_jmj .game_info_jmj .score_result_jmj
+main .result_container_jmj .btn_section_jmj
+main .result_container_jmj .btn_section_jmj .list_btn_jmj
+
+
 main .game_title_jmj {
 	text-align: center;
 }
