--- a/game/templates/game/game_detail.html
+++ b/game/templates/game/game_detail.html
@@ -19,16 +19,17 @@
 			<!-- 게임 종료 시: 결과 표시 -->
 			<div class="result_container_jmj">
 				<div class="game_result_jmj">
-					{% if result == "WIN" %}
+					{% if result == "승리" %}
 					<h2 class="result_title_jmj">WIN!</h2>
-					{% else %}
+					{% elif result == "패배" %}
 					<h2 class="result_title_jmj">LOSE</h2>
+					{% elif result == "무승부" %}
+					<h2 class="result_title_jmj">DRAW</h2>
 					{% endif %}
-
 					<div class="game_info_jmj">
 						{% if game.win_rule == "HIGH" %}
 						<p class="info_jmj">Higher number wins.</p>
-						{% else %}
+						{% elif game.win_rule == "LOW" %}
 						<p class="info_jmj">Lower number wins.</p>
 						{% endif %}
 
@@ -49,7 +50,6 @@
 				</div>
 			</div>
 			{% else %}
-			<!-- 게임 진행중: PIRO GAME 표시 -->
 			<div class="game_title_jmj">
 				<img src="{% static 'game/images/game.png' %}" alt="game" />
 				<h3>PIRO GAME</h3>
@@ -58,14 +58,12 @@
 			<div class="status_container_jmj">
 				<div class="game_status_jmj">
 					{% if can_counter %}
-					<!-- 반격 가능: 상대방 카드 표시 -->
 					<h2 class="status_jmj">
 						{{ game.attacker }} vs {{ game.defender }}
 					</h2>
 					<p>playing...</p>
 					<p>ME : {{ my_card }}</p>
 					{% elif can_cancel %}
-					<!-- 취소 가능: 내 카드 표시 -->
 					<h2 class="status_jmj">
 						{{ game.attacker }} vs {{ game.defender }}
 					</h2>
@@ -76,7 +74,9 @@
 				<div class="btn_section_jmj">
 					{% if can_counter %}
 
-					<a class="first_btn_jmj" href="{% url 'game:counter_attack' game.id %}"
+					<a
+						class="first_btn_jmj"
+						href="{% url 'game:counter_attack' game.id %}"
 						>Counter Attack</a
 					>
 					{% elif can_cancel %}
