--- a/game/templates/game/list_game.html
+++ b/game/templates/game/list_game.html
@@ -8,15 +8,6 @@
 {% endblock %}
 
 {% block content %}
-<header>
-    <h3>PIROGRAMMER CARD GAME</h3>
-    <div class="header_menu">
-        <a href="{% url 'game:create_game' %}">Game</a>
-        <a href="{% url 'game:ranking' %}">Ranking</a>
-        <a href="/accounts/logout/">Logout</a>
-    </div>
-</header>
-<footer></footer>
 <div class="list_container_mw">
     
     <div class="list_header_area_mw">
@@ -37,7 +28,11 @@
     {% for game in page_obj %}
     <li class="game_item_mw">
         <div class="game_info_text_mw">
-            {{ game.id }} - {{ game.attacker.username }} vs {{ game.defender.username }}
+            {% widthratio page_obj.start_index 1 -1 as sub_start %}
+            {% widthratio forloop.counter0 1 -1 as sub_counter %}
+            {{ page_obj.paginator.count|add:1|add:sub_start|add:sub_counter }}
+            
+            - {{ game.attacker.username }} vs {{ game.defender.username }}
         </div>
 
         <div class="game_status_badge_mw">
@@ -53,11 +48,13 @@
                 </a>
 
             {% elif game.status == "FINISHED" %}
-                {% if game.user_result == "win" %}
-                    <h2 class="result_title_jmj">WIN!</h2>
+                {% if game.user_result == "승리" %}
+                    <h2 class="result_title_jmj win">WIN!</h2>
                 
-                {% elif game.user_result == "lose" %}
-                    <h2 class="result_title_jmj">LOSE</h2>
+                {% elif game.user_result == "패배" %}
+                    <h2 class="result_title_jmj lose">LOSE</h2>
+                {% else %}
+                    <h2 class="result_title_jmj draw">DRAW</h2>
                 {% endif %}
             
             {% else %}
@@ -70,7 +67,7 @@
     {% empty %}
     <li class="no_game_mw">No Game History.</li>
     {% endfor %}
-</ul>
+    </ul>
 
     <div class="pagination_mw">
         {% if page_obj.has_previous %}
