--- a/game/templates/game/create_game.html
+++ b/game/templates/game/create_game.html
@@ -7,11 +7,11 @@
 	</head>
 	<body>
 		<header>
-			<h3>PIROGRAMMER CARD GAME</h3>
+			<a href="/"><h3>PIROGRAMMER CARD GAME</h3></a>
 			<div class="header_menu">
-				<p>Game</p>
-				<p>Ranking</p>
-				<p>Logout</p>
+				<a href="/game/list">Game</a>
+				<a href="/game/ranking">Ranking</a>
+				<a href="/logout/">Logout</a>
 			</div>
 		</header>
 		<main>
