--- a/game/static/game/css/game_detail.css
+++ b/game/static/game/css/game_detail.css
@@ -24,12 +24,18 @@ header {
 	color: #fff1a8;
 }
 
-header h3 {
-	font-size: 30px;
-	font-style: normal;
+header a {
+	text-decoration: none;
+	color: #fff1a8;
 }
 
-header h3:hover {
+header a h3 {
+	font-size: 30px;
+	font-style: normal;
+	color: #fff1a8;
+}
+
+header a h3:hover {
 	color: #ffe100;
 	cursor: url("../images/click_cursor.png"), pointer !important;
 }
@@ -40,11 +46,13 @@ header .header_menu {
 	font-style: normal;
 }
 
-header .header_menu p {
+header .header_menu a {
+	text-decoration: none;
+	color: #fff1a8;
 	margin: 0 20px;
 }
 
-header .header_menu p:hover {
+header .header_menu a:hover {
 	color: #ffe100;
 	cursor: url("../images/click_cursor.png"), pointer !important;
 }
@@ -59,16 +67,78 @@ main {
 	text-align: center;
 }
 
-main .result_container_jmj
-main .result_container_jmj .game_result_jmj
-main .result_container_jmj .game_result_jmj .result_title_jmj
-main .result_container_jmj .game_info_jmj
-main .result_container_jmj .game_info_jmj .info_jmj
-main .result_container_jmj .game_info_jmj .card_result_jmj
-main .result_container_jmj .game_info_jmj .score_result_jmj
-main .result_container_jmj .btn_section_jmj
-main .result_container_jmj .btn_section_jmj .list_btn_jmj
+main .result_container_jmj {
+	padding-top: 30px;
+}
 
+main .result_container_jmj .result_title_jmj {
+	color: var(--point1, #ffe100);
+	-webkit-text-stroke-width: 10px;
+	-webkit-text-stroke-color: #000;
+	font-size: 100px;
+	font-weight: 50;
+    paint-order: stroke fill;
+	margin-bottom: 20px;
+}
+
+main .result_container_jmj .game_result_jmj {
+	width: 60%;
+	height: 340px;
+	background: #0f1a33;
+	border-radius: 20px;
+	text-align: center;
+	padding: 20px 20px 50px 20px;
+	margin: 0 auto;
+}
+
+main .result_container_jmj .game_info_jmj {
+	width: 100%;
+	height: 250px;
+	background: #344e87;
+	text-align: center;
+	margin: 0 auto;
+	border-radius: 15px;
+	padding: 15px 0;
+}
+
+main .result_container_jmj .game_info_jmj .info_jmj {
+	font-size: 65px;
+	color: #00FE0D;
+}
+
+main .result_container_jmj .game_info_jmj .card_result_jmj {
+	font-size: 40px;
+	color: #fff;
+}
+
+main .result_container_jmj .game_info_jmj .score_result_jmj {
+	font-size: 60px;
+	color: #fff;
+}
+
+main .result_container_jmj .btn_section_jmj {
+	margin-top: 15px;
+}
+
+main .result_container_jmj .btn_section_jmj .list_btn_jmj {
+	display: inline-block;
+	width: 30%;
+	height: 40px;
+	color: #000;
+	text-decoration: none;
+	font-size: 25px;
+	background: #fff;
+	border: 2px solid #000;
+	border-radius: 10px;
+	line-height: 40px;
+}
+
+main .result_container_jmj .btn_section_jmj .list_btn_jmj:hover {
+	background: #000;
+	color: #fff;
+	border-color: #fff;
+	cursor: url("../images/click_cursor.png"), pointer !important;
+}
 
 main .game_title_jmj {
 	text-align: center;
