--- a/game/templates/game/counter_attack.html
+++ b/game/templates/game/counter_attack.html
@@ -3,11 +3,11 @@
 
 <body>
 	<header>
-		<h3>PIROGRAMMER CARD GAME</h3>
+		<a href="/"><h3>PIROGRAMMER CARD GAME</h3></a>
 		<div class="header_menu">
-			<p>Game</p>
-			<p>Ranking</p>
-			<p>Logout</p>
+			<a href="/game/list">Game</a>
+			<a href="/game/ranking">Ranking</a>
+			<a href="/logout/">Logout</a>
 		</div>
 	</header>
 	<main>
