--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -2,40 +2,60 @@
 <!-- 로그인 화면 -->
 <!-- !!! 절대 위치 옮기면 안돼요 !!! -->
 <!-- allauth 로그인 html을 덮어씌우는 구조 -->
-{% extends "base.html" %}
-{% load socialaccount %}
 
-{% block title %}로그인{% endblock %}
+{% load static %} {% load socialaccount %}
 
-{% block content %}
-<h2>로그인</h2>
+	<link rel="stylesheet" href="{% static 'account/css/login.css' %}" />
+	<body>
+		<header>
+			<h3>PIROGRAMMER CARD GAME</h3>
+			<div class="header_menu">
+				{% if user.is_authenticated %}
+				<a href="/game/">Game</a>
+				<a href="/game/ranking/">Ranking</a>
+				<a href="/logout/">Logout</a>
+				{% else %}
+				<a href="/login/">Login</a>
+				<a href="/signup/">Sign Up</a>
+				{% endif %}
+			</div>
+		</header>
+		<main>
+			<img
+				src="{% static 'account/images/game.png' %}"
+				alt="game"
+				class="icon_game_jmj"
+			/>
+			<h1>PIRO GAME</h1>
+			{% csrf_token %}
+      <div class="login_form_jmj">
+        <div class="login_jmj">
+          <form method="post" action="{% url 'account_login' %}">
+            <p>
+              <label for="{{ form.login.id_for_label }}">ID</label>
+              {{ form.login }}
+            </p>
 
-<form method="post" action="{% url 'account_login' %}">
-  {% csrf_token %}
+            <p>
+              <label for="{{ form.password.id_for_label }}"
+                >Password</label
+              >
+              {{ form.password }}
+            </p>
 
-  <p>
-    <label for="{{ form.login.id_for_label }}">아이디</label><br>
-    {{ form.login }}
-  </p>
+            {% if form.non_field_errors %} 
+            {{ form.non_field_errors }} 
+            {% endif %}
 
-  <p>
-    <label for="{{ form.password.id_for_label }}">비밀번호</label><br>
-    {{ form.password }}
-  </p>
+            <button type="submit">Login</button>
+          </form>
 
-  {% if form.non_field_errors %}
-    {{ form.non_field_errors }}
-  {% endif %}
-
-  <button type="submit">로그인</button>
-</form>
-
-<hr>
-
-<h3>소셜 로그인</h3>
-<a href="{% provider_login_url 'google' %}">Google로 로그인</a>
-
-<hr>
-
-<a href="{% url 'account_signup' %}">회원가입</a>
-{% endblock %}
+          <hr>
+          <a href="{% provider_login_url 'google' %}"><img src="{% static 'account/images/google.png' %}" alt="Google" />Google Login</a>
+        </div>
+        <a href="{% url 'account_signup' %}">Sign Up</a>
+      </div>
+		</main>
+		<footer></footer>
+	</body>
+</html>
