--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,9 @@
 </head>
 <body>
     <header>
-        <h3>PIROGRAMMER CARD GAME</h3>
+        <a href="/">
+            <h3>PIROGRAMMER CARD GAME</h3>
+        </a>
         <div class="header_menu">
             <a href="{% url 'game:create_game' %}">Game</a>
             <a href="{% url 'game:ranking' %}">Ranking</a>
