create signup html&css

--- a/templates/account/main.html
+++ b/templates/account/main.html
@@ -12,7 +12,7 @@
 			<h3>PIROGRAMMER CARD GAME</h3>
 			<div class="header_menu">
 				{% if user.is_authenticated %}
-				<a href="/game/">Game</a>
+				<a href="/game/create/">Game</a>
 				<a href="/game/ranking/">Ranking</a>
 				<a href="/logout/">Logout</a>
 				{% else %}
