--- a/game/static/game/css/game_detail.css
+++ b/game/static/game/css/game_detail.css
@@ -24,18 +24,20 @@ header {
 	color: #fff1a8;
 }
 
-header a {
+header > a {
 	text-decoration: none;
 	color: #fff1a8;
+    display: flex;
+    align-items: center;
 }
 
-header a h3 {
+header h3 {
 	font-size: 30px;
 	font-style: normal;
-	color: #fff1a8;
+    margin: 0;
 }
 
-header a h3:hover {
+header > a:hover h3 {
 	color: #ffe100;
 	cursor: url("../images/click_cursor.png"), pointer !important;
 }
@@ -57,6 +59,7 @@ header .header_menu a:hover {
 	cursor: url("../images/click_cursor.png"), pointer !important;
 }
 
+/* 메인 컨텐츠 */
 main {
 	width: 100%;
 	min-height: calc(100vh - 100px);
@@ -152,15 +155,9 @@ main .game_title_jmj img {
 }
 
 @keyframes float {
-	0% {
-		transform: translateY(0);
-	}
-	50% {
-		transform: translateY(-10px);
-	}
-	100% {
-		transform: translateY(0);
-	}
+	0% { transform: translateY(0); }
+	50% { transform: translateY(-10px); }
+	100% { transform: translateY(0); }
 }
 
 main .game_title_jmj h3 {
