--- a/game/templates/game/counter_attack.html
+++ b/game/templates/game/counter_attack.html
@@ -1,63 +1,52 @@
+{% extends "base.html" %}
 {% load static %}
+
+{% block title %}Counter Attack{% endblock %}
+
+{% block header %}
 <link rel="stylesheet" href="{% static 'game/css/counter_attack.css' %}" />
+{% endblock %}
 
-<body>
-	<header>
-		<a href="/"><h3>PIROGRAMMER CARD GAME</h3></a>
-		<div class="header_menu">
-			<a href="/game/list">Game</a>
-			<a href="/game/ranking">Ranking</a>
-			<a href="/logout/">Logout</a>
-		</div>
-	</header>
-	<main>
-		<h3>PICK YOUR CARD</h3>
-		<form method="post" action="{% url 'game:submit_counter' game.id %}">
-			{% csrf_token %}
-			<div class="card_select_jmj">
-				{% for card in cards %}
-				<label>
-					<input
-						type="radio"
-						name="card"
-						value="{{ card }}"
-						required
-					/>
-					{{ card }}
-				</label>
-				{% endfor %}
-			</div>
-			<button class="counterbutton_jmj" type="submit">
-				Counter Attack!
-			</button>
-		</form>
-	</main>
-	<footer></footer>
-	<script>
-		document.addEventListener("DOMContentLoaded", function () {
-			console.log("Script loaded");
+{% block content %}
+    <h3>PICK YOUR CARD</h3>
+    <form method="post" action="{% url 'game:submit_counter' game.id %}">
+        {% csrf_token %}
+        <div class="card_select_jmj">
+            {% for card in cards %}
+            <label>
+                <input
+                    type="radio"
+                    name="card"
+                    value="{{ card }}"
+                    required
+                />
+                {{ card }}
+            </label>
+            {% endfor %}
+        </div>
+        <button class="counterbutton_jmj" type="submit">
+            Counter Attack!
+        </button>
+    </form>
 
-			const radios = document.querySelectorAll(
-				'input[type="radio"][name="card"]',
-			);
-			console.log("Found radios:", radios.length);
+    <script>
+        document.addEventListener("DOMContentLoaded", function () {
+            const radios = document.querySelectorAll(
+                'input[type="radio"][name="card"]',
+            );
+            radios.forEach((radio) => {
+                radio.addEventListener("change", function () {
+                    document
+                        .querySelectorAll(".card_select_jmj label")
+                        .forEach((label) => {
+                            label.classList.remove("selected");
+                        });
 
-			radios.forEach((radio) => {
-				radio.addEventListener("change", function () {
-					console.log("Radio changed:", this.value);
-
-					document
-						.querySelectorAll(".card_select_jmj label")
-						.forEach((label) => {
-							label.classList.remove("selected");
-						});
-
-					if (this.checked) {
-						this.parentElement.classList.add("selected");
-						console.log("Selected class added");
-					}
-				});
-			});
-		});
-	</script>
-</body>
+                    if (this.checked) {
+                        this.parentElement.classList.add("selected");
+                    }
+                });
+            });
+        });
+    </script>
+{% endblock %}
